# OptiLab

./: .gitignore  LICENSE  README.md  base.py  functions.json  gradient_methods.py  models.py  pyproject.toml  requirements.txt  test_optimizer.py  utils.py
code/: main.py  test_genetic_alg.py  test_optimizer.py
code/engine/: function_library.py  initializers.py  models.py  utils.py
code/engine/optimizers/: base.py  gradient_methods.py  newton_methods.py  population_based.py
code/engine/strategies/: crossover.py  mutation.py  projections.py  selection.py
code/gui/: gui.py  plotter.py  workers.py
code/notebooks/: GenAlgLab1.ipynb
code/tests/: test_convexity.py  test_hessians.py  test_newton.py  test_projections.py
code/ui_interactive/: app.py
